[metadata]
name = config-plus
url = https://github.com/rahulsrma26/config-plus
project_urls =
    Code = https://github.com/rahulsrma26/config-plus
license = LICENSE
platform = any
author = Rahul Sharma
author_email = rahulsrma26@gmail.com
maintainer = rahulsrma26
maintainer_email = welcometors@gmail.com
description = Consolidates command argument and ini files with single definition
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = config configparser argparse ini setuptools development
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[bdist_wheel]
universal = 0
